[package]
name = "archivos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
directories = "2.0"
egui_extras = {version = "0.32.0", features = ["image"]}
image = { version = "0.25", default-features = false, features = ["png"] }
